# ChangeLog for dev-ruby/colorize
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/colorize/ChangeLog,v 1.1 2013/08/14 07:39:23 mrueg Exp $

*colorize-0.5.8 (14 Aug 2013)

  14 Aug 2013; Manuel Rüger <mrueg@gentoo.org> +colorize-0.5.8.ebuild,
  +metadata.xml:
  Initial version