@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST colorize-0.5.8.gem 7168 SHA256 0f3d2c56f6a9da8dd6e8bb7c4448dab91a682615ef49feff415a8a6999dedfe5 SHA512 9710a90a3a106f471a76ae60fee8d86bbdc5193f6cea4b40e0e49752d549299ed53571c2654cb718da3fdeb3ea8078a52e56589d4d1bdeeb83e8f0da9b9b89bd WHIRLPOOL 422e193e1b71237a31b0903dc506607a258c185790e48bafbee81b56c1f99d5569a7813ee556c29ecacc86076a126160d4aa072684a55bf9299e0251e67a359f
+DIST colorize-0.6.0.gem 7680 SHA256 9e94b288ccbf9a8857076d24f56b0292c173a3f30adb6259e88ae1497b276369 SHA512 739b52a83834db5a37866e481f99829c18b9e4004ff0ad49a4c5f6287465e0779b9c5e1bf982a720015026afe878a1682cecbb917c4c0d8b2dbd13558c9bb5fc WHIRLPOOL 6f297e9d8fdf9e49e0552ab16391f7273d72e244edf6282f6baa852ea033bd9310a914d5f74e2fd5b09ed76193fcdc80a87aeb66594d79bfce3323fb9f7fb233
 EBUILD colorize-0.5.8.ebuild 650 SHA256 ebc349fb14508439a26334a6fe70c94689d82b3eba8e9fa1607b5f488aa926c7 SHA512 24db05d51bb69eebe0ac74fe986e2bb8125c3908435df210b599a416b98770c9ccefd149ad0919415801f1da38060756b24fe5a37480fa485ca54edc86d360ee WHIRLPOOL 1b9b89865127caf82265894f4fcc2484f0d7047f8d7b8f40ff3db605671a488e3ebb32deedf2aae41c1c047964c4aa6d4871c344ed9ccf43a73c290b1668d918
-MISC ChangeLog 344 SHA256 ce97c5d6e5b55aec5de1597e37b0a654477f0fcec0bc904cfb8f3020fea1c1ac SHA512 cf1e811000f017ad0659ed9a91a793577f10c718989455f093d635c29f29dab693f8b56e242bb6a90749c4734ec570a3db74dcfcf1928ecf2c58b6023a6209c1 WHIRLPOOL a3b6a2fe2c7479d4376038b1af6f668cf81ee38fb6494dffc38f0743f9d4315b4d56554cc6694acd5cb7d3aeb749d514fd95a668017a650d56f99834609b19eb
+EBUILD colorize-0.6.0.ebuild 658 SHA256 e754d5dbac13e4585ea64268e217718fc9e48411176e89d2a274706d049cfec4 SHA512 9713543fd51f5e30a3f861054fccfbbcafb8eb2026b431b99e587183fe605147c05f907d264412139d1dd7880ee26030b7b0919237b2013369505c5876e5c656 WHIRLPOOL 4943b375d6f896222bf17315d53c0739ea2fa9a35033f8368b5f3dd0905f2c51c8d14a2f841cafd6148041fa4ba6b4a90fe0fd91bf6fea587840a05c56e6bd4a
+MISC ChangeLog 467 SHA256 adc4c9870f4fd30b6223c3f0ca12bff95fb666d0bfdfbe3624be2dadbab79ba2 SHA512 25109852edb2b40624b3de5ecd41f407d2ced0dbc70f4fb253fd382310da4a79b8fd717269475ecc0c7bb1345189dd67e77b0626ce2dc8d5f8442982fd8c1e8c WHIRLPOOL fede972e283ef3856b354b13e5328ef5bfd53e150a7cf19db73367de783f2746a40356c23806af8a007825c92d05dc80b77590a0395130ef70634f6f29d45669
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iF4EAREIAAYFAlJDxYgACgkQiIP6VqMIqNfErwD+KilB1ssZ43GnWa/tEYhZhn1h
++NEfaCymLQ0gQOGPaRUA/1fp8Zt/NeJILrDpTZPI/jI/Tjs3/dlJAedpiXmuT5NR
+=yvMJ
+-----END PGP SIGNATURE-----
